--- a/resources/source/css/style.css
+++ b/resources/source/css/style.css
@@ -156,7 +156,7 @@
   letter-spacing: 1.2px;
 }
 .about__text p {
-  padding: 12px 0;
+  padding: 12px 0 0;
   font-size: 16px;
   line-height: 28px;
   letter-spacing: 0.8px;
@@ -414,7 +414,8 @@
 }
 
 .contact__submit {
-  width: 244px;
+  width: 100%;
+  max-width: 244px;
   height: 53px;
   border-radius: 1px;
   background-color: #6eeee4;
@@ -530,9 +531,13 @@
     display: block;
   }
   .header__title {
-    font-size: 20px;
-    line-height: 24px;
     max-width: 240px;
+    margin: 30px auto;
+    font-size: 20px;
+    line-height: 40px;
+  }
+  .header__button {
+    margin: 0;
   }
   .header__logos {
     display: none;
@@ -550,47 +555,56 @@
   }
   .about__samples {
     width: 100%;
+    margin: 30px auto;
   }
-  .about__text {
+  .about__text p {
     font-size: 14px;
+    line-height: 17px;
   }
   .about__actually-do {
     font-size: 14px;
     line-height: 28px;
     letter-spacing: 1.2px;
+    margin-bottom: 30px;
   }
   .about__actually-do h3 {
     font-size: 14px;
+    padding-bottom: 8px;
   }
   .about__we-great {
     width: 100%;
   }
   .about__we-great h3 {
     font-size: 14px;
+    padding-bottom: 8px;
   }
   .featured__container {
     padding: 40px 20px;
   }
   .featured__collection {
     width: 100%;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    overflow-x: scroll;
+    margin-top: 40px;
   }
-  .featured__collection > div {
+  .featured__demo > a > img {
     width: 100%;
   }
   .team__container {
     padding: 40px 20px;
   }
+  .team__collection {
+    margin-top: 40px;
+  }
   .employee > img {
     width: 100%;
   }
+  .contact {
+    background: none;
+  }
   .contact__container {
     padding: 40px 20px;
+  }
+  .contact__container > div {
+    height: 100%;
   }
   .contact__map {
     width: 100%;
@@ -600,5 +614,8 @@
     max-height: -webkit-fit-content;
     max-height: -moz-fit-content;
     max-height: fit-content;
+  }
+  .footer {
+    padding: 30px 0;
   }
 }
