--- a/resources/source/scss/style.scss
+++ b/resources/source/scss/style.scss
@@ -55,10 +55,6 @@ $break-point-phone: 576px;
     right: 20px;
 }
 
-.header__info {
-    /* will made flexbox and row-reverse for mobile */
-}
-
 .header__title {
     max-width: 400px;
     margin: 58px auto;
@@ -330,15 +326,14 @@ $break-point-phone: 576px;
     padding: 140px 150px 122px;
 
     > div {
-        height: 460px;
         background-color: #001871b5;
         box-shadow: 0px 0px 30px 0px #1515151f;
+        width: 100%;
+        max-width: 540px;
     }
 }
 
 .contact__feedback {
-    width: 100%;
-    max-width: 614px;
     padding: 47px 32px 38px;
 }
 
@@ -400,8 +395,6 @@ $break-point-phone: 576px;
 }
 
 .contact__info {
-    width: 100%;
-    max-width: 500px;
     padding: 35px 22px 20px;
 }
 
@@ -412,9 +405,7 @@ $break-point-phone: 576px;
 }
 
 .contact__map {
-    max-width: 455px;
-    max-height: 224px;
-    margin-top: 33px;
+    margin-top: 20px;
 }
 
 .footer {
@@ -478,14 +469,13 @@ $break-point-phone: 576px;
     fill: #ffffff;
 }
 
-@media screen and (max-width: $break-point-phone) {
-    .header__container {
-        padding: 20px 20px 40px;
-    }
-
-    .header__logo {
-        width: 180px;
-        height: 100px;
+@media screen and (max-width: $break-point-tablet) {
+    .header__container,
+    .about__container,
+    .featured__container,
+    .team__container,
+    .contact__container {
+        padding: 40px;
     }
 
     .header__link {
@@ -494,6 +484,48 @@ $break-point-phone: 576px;
 
     .header__link-small {
         display: block;
+    }
+
+    .header__logos {
+        justify-content: space-around;
+    }
+
+    .about__samples {
+        margin: 50px auto;
+    }
+
+    .about__we-great {
+        width: 100%;
+    }
+
+    .featured__collection,
+    .team__collection {
+        width: 100%;
+        margin-top: 40px;
+    }
+
+    .contact__map {
+        width: 100%;
+
+        iframe {
+            max-width: 100%;
+            max-height: fit-content;
+        }
+    }
+
+    .footer {
+        padding: 30px 0;
+    }
+}
+
+@media screen and (max-width: $break-point-phone) {
+    .header__container {
+        padding: 20px 20px 40px;
+    }
+
+    .header__logo {
+        width: 180px;
+        height: 100px;
     }
 
     .header__title {
@@ -552,8 +584,6 @@ $break-point-phone: 576px;
     }
 
     .about__we-great {
-        width: 100%;
-
         h3 {
             font-size: 14px;
             padding-bottom: 8px;
@@ -564,21 +594,12 @@ $break-point-phone: 576px;
         padding: 40px 20px;
     }
 
-    .featured__collection {
-        width: 100%;
-        margin-top: 40px;
-    }
-
     .featured__demo > a > img {
         width: 100%;
     }
 
     .team__container {
         padding: 40px 20px;
-    }
-
-    .team__collection {
-        margin-top: 40px;
     }
 
     .employee > img {
@@ -595,18 +616,5 @@ $break-point-phone: 576px;
         > div {
             height: 100%;
         }
-    }
-
-    .contact__map {
-        width: 100%;
-
-        iframe {
-            max-width: 100%;
-            max-height: fit-content;
-        }
-    }
-
-    .footer {
-        padding: 30px 0;
     }
 }
