--- a/resources/source/css/style.css
+++ b/resources/source/css/style.css
@@ -57,7 +57,8 @@
 }
 
 .header__button {
-  width: 232px;
+  width: 100%;
+  max-width: 232px;
   height: 53px;
   margin: 29px 0;
   border: 2px solid rgba(0, 0, 0, 0.5019607843);
@@ -118,7 +119,7 @@
 }
 
 .about__container {
-  padding: 129px 0 28px;
+  padding: 129px 40px 28px;
 }
 
 .about__subtitle {
@@ -126,8 +127,8 @@
 }
 
 .about__samples {
-  width: 80%;
-  max-width: 1080px;
+  width: 100%;
+  max-width: 1140px;
   margin: 70px auto;
 }
 
@@ -142,7 +143,8 @@
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
-  max-width: 1080px;
+  width: 100%;
+  max-width: 1140px;
   margin: 0 auto;
   text-align: left;
 }
@@ -175,7 +177,7 @@
 }
 
 .featured__container {
-  padding: 128px 0;
+  padding: 128px 40px;
 }
 
 .featured__subtitle {
@@ -201,7 +203,7 @@
 }
 
 .team__container {
-  padding: 104px 0 171px;
+  padding: 104px 40px 171px;
 }
 
 .team__subtitle {
@@ -536,14 +538,23 @@
     width: 100%;
     margin-top: 40px;
   }
+  .employee > img {
+    border: 1px solid #000000;
+  }
+  .contact__info {
+    padding: 0;
+  }
+  .contact__credits {
+    padding: 15px 15px 0;
+  }
   .contact__map {
     width: 100%;
+    margin-bottom: -2px;
   }
   .contact__map iframe {
-    max-width: 100%;
-    max-height: -webkit-fit-content;
-    max-height: -moz-fit-content;
-    max-height: fit-content;
+    margin: 0 auto;
+    width: 100%;
+    height: 320px;
   }
   .footer {
     padding: 30px 0;
@@ -616,5 +627,9 @@
   }
   .contact__container > div {
     height: 100%;
+  }
+  .contact__submit {
+    display: block;
+    margin: 0 auto;
   }
 }
