--- a/resources/source/scss/style.scss
+++ b/resources/source/scss/style.scss
@@ -66,7 +66,8 @@ $break-point-phone: 576px;
 }
 
 .header__button {
-    width: 232px;
+    width: 100%;
+    max-width: 232px;
     height: 53px;
     margin: 29px 0;
     border: 2px solid #00000080;
@@ -129,7 +130,7 @@ $break-point-phone: 576px;
 }
 
 .about__container {
-    padding: 129px 0 28px;
+    padding: 129px 40px 28px;
 }
 
 .about__subtitle {
@@ -137,8 +138,8 @@ $break-point-phone: 576px;
 }
 
 .about__samples {
-    width: 80%;
-    max-width: 1080px;
+    width: 100%;
+    max-width: 1140px;
     margin: 70px auto;
 }
 
@@ -146,7 +147,8 @@ $break-point-phone: 576px;
     display: flex;
     flex-direction: column;
     align-items: end;
-    max-width: 1080px;
+    width: 100%;
+    max-width: 1140px;
     margin: 0 auto;
     text-align: left;
 
@@ -183,7 +185,7 @@ $break-point-phone: 576px;
 }
 
 .featured__container {
-    padding: 128px 0;
+    padding: 128px 40px;
 }
 
 .featured__subtitle {
@@ -204,7 +206,7 @@ $break-point-phone: 576px;
 }
 
 .team__container {
-    padding: 104px 0 171px;
+    padding: 104px 40px 171px;
 }
 
 .team__subtitle {
@@ -504,12 +506,26 @@ $break-point-phone: 576px;
         margin-top: 40px;
     }
 
+    .employee > img {
+        border: 1px solid #000000;
+    }
+
+    .contact__info {
+        padding: 0;
+    }
+
+    .contact__credits {
+        padding: 15px 15px 0;
+    }
+
     .contact__map {
         width: 100%;
+        margin-bottom: -2px;
 
         iframe {
-            max-width: 100%;
-            max-height: fit-content;
+            margin: 0 auto;
+            width: 100%;
+            height: 320px;
         }
     }
 
@@ -607,5 +623,10 @@ $break-point-phone: 576px;
 
     .contact__container > div {
         height: 100%;
+    }
+
+    .contact__submit {
+        display: block;
+        margin: 0 auto;
     }
 }
