Add inner links between forms and pages

--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -15,7 +15,9 @@
     <header class="header">
         <div class="header__container">
             <p class="header__start m-0">AdminPanel</p>
-            <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
+            <a href="/index.html">
+                <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="PerfectLine Logo">
+            </a>
         </div>
     </header>
     <main class="index">
