--- a/resources/views/admin/forms/auth-form.html
+++ b/resources/views/admin/forms/auth-form.html
@@ -15,12 +15,14 @@
     <header class="header">
         <div class="header__container">
             <p class="header__start m-0">AdminPanel</p>
-            <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
+            <a href="/index.html">
+                <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="PerfectLine Logo">
+            </a>
         </div>
     </header>
     <main class="auth">
         <div class="auth__container">
-            <form action="" class="auth__form">
+            <form action="/resources/views/admin/admin-panel.html" class="auth__form">
                 <h1 class="auth__heading">Admin Authorization</h1>
                 <div class="auth__fields">
                     <div class="auth__row">
