--- a/resources/views/admin/forms/edit-person-form.html
+++ b/resources/views/admin/forms/edit-person-form.html
@@ -17,7 +17,9 @@
             <a href="/resources/views/admin/admin-panel.html">
                 <p class="header__start m-0">AdminPanel</p>
             </a>
-            <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
+            <a href="/index.html">
+                <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="PerfectLine Logo">
+            </a>
         </div>
     </header>
     <main class="person">
