Switch mail with twitter and add link for crosses
For person forms

--- a/resources/views/admin/forms/edit-person-form.html
+++ b/resources/views/admin/forms/edit-person-form.html
@@ -26,7 +26,9 @@
         <div class="person__container">
             <form action="" class="person__form">
                 <h1 class="person__title">Edit person</h1>
-                <img src="/resources/images/admin/cross.svg" alt="Close form" class="person__close">
+                <a href="/resources/views/admin/admin-panel.html">
+                    <img src="/resources/images/admin/cross.svg" alt="Close form" class="person__close">
+                </a>
                 <div class="person__data">
                     <div class="row">
                         <div class="col"><label for="name">Name</label></div>
@@ -67,15 +69,15 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col"><label for="mail">Mail</label></div>
-                        <div class="col">
-                            <input type="text" id="mail" name="mail" class="person__mail form-control">
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="col"><label for="twitter">Twitter</label></div>
                         <div class="col">
                             <input type="text" id="twitter" name="twitter" class="person__twitter form-control">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><label for="mail">Mail</label></div>
+                        <div class="col">
+                            <input type="text" id="mail" name="mail" class="person__mail form-control">
                         </div>
                     </div>
                 </div>
